--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   }
   
   body {
-    background-color: #111;
+    background-color: #423c3c;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -11,4 +11,19 @@
     overflow: hidden;
     margin: 0;
   }
-  
+.container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    min-width: 400px;
+}  
+
+.square{
+    width: 16px;
+    height: 16px;
+    background: #6d6868;
+    margin: 2px;
+    box-shadow: 0 0 2px #000;
+    transition: 2s ease;
+}
